--- a/index.html
+++ b/index.html
@@ -98,9 +98,9 @@ footer {background: #aaa;color:white;}
 <script>
   
 
-  
+ alert("The popups shoen are harmless and will do nothing to your computer.They will stop one you finish the game.");
  var playeName = prompt("What is your name" );
- alert("Hi " + playeName + " Welcome to The Popup virus 2016.");
+ alert("Hi " + playeName + " Welcome to The Popup fake virus by paingames.");
   
  var popup = prompt("You're searching the Web, looking for free games, and you run into a popup! Do you FIGHT it, PAY it, or REPORT it?").toUpperCase();
 
@@ -109,8 +109,8 @@ switch(popup) {
     var strong = prompt("How trustworthy of your computer! Do you have adblock (YES or NO)?").toUpperCase();
     var smart = prompt("Do you have antiSpyware?").toUpperCase();
     if(strong === 'YES' || smart === 'YES') {
-      alert("Too bad..the popup was smarter and stronger than you blocked your softwares!");
-      alert("Thanks" + playeName+ "for telling your softwares!");
+      alert("Too bad..the popup was smarter and stronger than you blocked, and your softwares!");
+      alert("Thanks " + playeName+ " for telling your softwares! By the way yoyu loose");
     } else {
       alert("Smart move not trusting popups, a true winner!");
     }
@@ -121,12 +121,14 @@ switch(popup) {
     if(money === 'YES' && dollars === 'YES') {
       alert("Great "+ playeName+",! You payed the popup and now the popup is gonna spawm your email ");
             alert(playeName+"@email.com just got 9999999999 emails!");
+	    alert(playeName+"YOU LOOSE!");
     } else {
       alert("smart decision" + playeName);
+	    alert("You won!);
     }
     break;
   case 'REPORT':
-    var fast = prompt("do you have googles phone number (YES or NO)?").toUpperCase();
+    var fast = prompt("Do you have google's phone number (YES or NO)?").toUpperCase();
     var headStart = prompt("Did you call em'").toUpperCase();
     if(fast === 'YES' || headStart === 'YES') {
       alert("Google finally did something, You live  through the Web another day.");
