--- a/index.html
+++ b/index.html
@@ -124,7 +124,7 @@ switch(popup) {
 	    alert(playeName+"YOU LOOSE!");
     } else {
       alert("smart decision" + playeName);
-	    alert("You won!);
+	    alert("You won!");
     }
     break;
   case 'REPORT':
