--- a/index.html
+++ b/index.html
@@ -98,7 +98,7 @@ footer {background: #aaa;color:white;}
 <script>
   
 
- alert("The popups shoen are harmless and will do nothing to your computer.They will stop one you finish the game.");
+ alert("The popups shown are harmless and will do nothing to your computer.They will stop one you finish the game.");
  var playeName = prompt("What is your name" );
  alert("Hi " + playeName + " Welcome to The Popup fake virus by paingames.");
   
