--- a/index.html
+++ b/index.html
@@ -90,7 +90,7 @@ footer {background: #aaa;color:white;}
   
 </article>
 
-<footer>Copyright © Paingames' Viruses!</footer>
+<footer>Copyright © Paingames Viruses!</footer>
 </div>
 
 
@@ -115,10 +115,12 @@ switch(popup) {
       alert("Smart move not trusting popups, a true winner!");
     }
     break;
-  case 'PAY':
-    var money = prompt("All right, we'll pay the popup. Do you have any money (YES or NO)?").toUpperCase();
-    var dollars = prompt("What is your email").toUpperCase();
-    if(money === 'YES' && dollars === 'YES') {
+  case 'Click':
+    var clik = prompt("Do you really want to click the popup? (YES or NO)?").toUpperCase();
+		  alert(Get a free iphone 7 Type your email below!);
+		  alert(LOL, to bad!);
+    var exit = prompt("Do you want to exit").toUpperCase();
+    if(clik === 'YES' && exit === 'YES') {
       alert("Great "+ playeName+",! You payed the popup and now the popup is gonna spawm your email ");
             alert(playeName+"@email.com just got 9999999999 emails!");
 	    alert(playeName+"YOU LOOSE!");
