--- a/index.html
+++ b/index.html
@@ -117,8 +117,8 @@ switch(popup) {
     break;
   case 'Click':
     var clik = prompt("Do you really want to click the popup? (YES or NO)?").toUpperCase();
-		  alert(Get a free iphone 7 Type your email below!);
-		  alert(LOL, to bad!);
+		  alert("Get a free iphone 7 Type your email below!");
+		  alert("LOL, to bad!");
     var exit = prompt("Do you want to exit").toUpperCase();
     if(clik === 'YES' && exit === 'YES') {
       alert("Great "+ playeName+",! You payed the popup and now the popup is gonna spawm your email ");
