--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@ footer {background: #aaa;color:white;}
   <p>&nbsp;</p>
   <p>&nbsp;</p>
   <p>&nbsp;</p>
-  <p>&nbsp;</p>
+   <p>&nbsp;</p>
   <p>&nbsp;</p>
   <p>&nbsp;</p>
   <p>&nbsp;</p>
@@ -98,11 +98,11 @@ footer {background: #aaa;color:white;}
 <script>
   
 
- alert("The popups shown are harmless and will do nothing to your computer.They will stop one you finish the game.");
+ alert("The popups shown are harmless and will do nothing to your computer.They will stop once you finish the game.");
  var playeName = prompt("What is your name" );
- alert("Hi " + playeName + " Welcome to The Popup fake virus by paingames.");
+ alert("Hi " + playeName + " Welcome to The  fake virus by paingames.");
   
- var popup = prompt("You're searching the Web, looking for free games, and you run into a popup! Do you FIGHT it, PAY it, or REPORT it?").toUpperCase();
+ var popup = prompt("You're searching the Web, looking for free games, and you run into a popup! Do you FIGHT it, Click it, or REPORT it?").toUpperCase();
 
 switch(popup) {
   case 'FIGHT':
@@ -139,6 +139,6 @@ switch(popup) {
     }
     break;
   default:
-    prompt("I didn't understand your choice. Try again or your computer will get infected, this time picking FIGHT, PAY, or REPORT!");
+    prompt("I didn't understand your choice. Try again or your computer will get infected, this time picking FIGHT, Click, or REPORT!");
 }</script><script type="text/javascript" src="js/script.js"></script>
 </body>
