--- a/index.html
+++ b/index.html
@@ -102,7 +102,7 @@ footer {background: #aaa;color:white;}
  var playeName = prompt("What is your name" );
  alert("Hi " + playeName + " Welcome to The  fake virus by paingames.");
   
- var popup = prompt("You're searching the Web, looking for free games, and you run into a popup! Do you FIGHT it, Click it, or REPORT it?").toUpperCase();
+ var popup = prompt("You're searching the Web, looking for free games, and you run into a popup! Do you FIGHT it, CLICK it, or REPORT it?").toUpperCase();
 
 switch(popup) {
   case 'FIGHT':
@@ -115,7 +115,7 @@ switch(popup) {
       alert("Smart move not trusting popups, a true winner!");
     }
     break;
-  case 'Click':
+  case 'CLICK':
     var clik = prompt("Do you really want to click the popup? (YES or NO)?").toUpperCase();
 		  alert("Get a free iphone 7 Type your email below!");
 		  alert("LOL, to bad!");
@@ -139,6 +139,6 @@ switch(popup) {
     }
     break;
   default:
-    prompt("I didn't understand your choice. Try again or your computer will get infected, this time picking FIGHT, Click, or REPORT!");
+    prompt("I didn't understand your choice. Try again or your computer will get infected, this time picking FIGHT, CLICK, or REPORT!");
 }</script><script type="text/javascript" src="js/script.js"></script>
 </body>
